force-app/main/default/objects/crms14__Person_with_Significant_Control__c/crms14__Person_with_Significant_Control__c.object-meta.xml
<CustomObject>
    <label>Person with Significant Control</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Person with Significant Control</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>