force-app/main/default/objects/crms14__Person_with_Significant_Control__c/fields/crms14__ACSP_Name__c.field-meta.xml
<CustomField>
    <fullName>crms14__ACSP_Name__c</fullName>
    <description>The name of the authorised corporate service provider that verified the identity of the officer.</description>
    <inlineHelpText>The name of the authorised corporate service provider that verified the identity of the officer.</inlineHelpText>
    <label>ACSP Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>