force-app/main/default/objects/crms14__Person_with_Significant_Control__c/fields/crms14__Appointment_Verification_Due_On__c.field-meta.xml
<CustomField>
    <fullName>crms14__Appointment_Verification_Due_On__c</fullName>
    <description>The date by which an identity verification statement must be supplied for the appointment.</description>
    <inlineHelpText>The date by which an identity verification statement must be supplied for the appointment.</inlineHelpText>
    <label>Appointment Verification Due On</label>
    <type>Date</type>
</CustomField>