force-app/main/default/objects/crms14__Person_with_Significant_Control__c/fields/crms14__Appointment_Verification_End_On__c.field-meta.xml
<CustomField>
    <fullName>crms14__Appointment_Verification_End_On__c</fullName>
    <description>The date on which the identity verification statement was removed for the appointment.</description>
    <inlineHelpText>The date on which the identity verification statement was removed for the appointment.</inlineHelpText>
    <label>Appointment Verification End On</label>
    <type>Date</type>
</CustomField>