force-app/main/default/objects/crms14__Person_with_Significant_Control__c/fields/crms14__Ceased_On__c.field-meta.xml
<CustomField>
    <fullName>crms14__Ceased_On__c</fullName>
    <label>Ceased On</label>
    <type>Date</type>
</CustomField>