force-app/main/default/objects/crms14__Person_with_Significant_Control__c/fields/crms14__Identity_Verified_On__c.field-meta.xml
<CustomField>
    <fullName>crms14__Identity_Verified_On__c</fullName>
    <description>The date on which the authorised corporate service provider verified the identity of the officer.</description>
    <inlineHelpText>The date on which the authorised corporate service provider verified the identity of the officer.</inlineHelpText>
    <label>Identity Verified On</label>
    <type>Date</type>
</CustomField>