force-app/main/default/objects/crms14__Person_with_Significant_Control__c/fields/crms14__Kind__c.field-meta.xml
<CustomField>
    <fullName>crms14__Kind__c</fullName>
    <label>Kind</label>
    <length>255</length>
    <type>Text</type>
</CustomField>