force-app/main/default/objects/crms14__Person_with_Significant_Control__c/fields/crms14__Natures_Of_Control__c.field-meta.xml
<CustomField>
    <fullName>crms14__Natures_Of_Control__c</fullName>
    <label>Natures Of Control</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>