force-app/main/default/objects/crms14__Person_with_Significant_Control__c/fields/crms14__Officer__c.field-meta.xml
<CustomField>
    <fullName>crms14__Officer__c</fullName>
    <label>Officer</label>
    <referenceTo>crms14__Officer__c</referenceTo>
    <relationshipLabel>Person with Significant Control</relationshipLabel>
    <relationshipName>Person_with_Significant_Control</relationshipName>
    <relationshipOrder>1</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>