force-app/main/default/objects/crms14__Person_with_Significant_Control__c/fields/crms14__Self_Link__c.field-meta.xml
<CustomField>
    <fullName>crms14__Self_Link__c</fullName>
    <label>Self Link</label>
    <length>255</length>
    <type>Text</type>
</CustomField>